# DroneSimulator

./: CMakeLists.txt  README.md
cmake/: Findraylib.cmake
src/: comic.h  config.c  controller.c  list.c  model.c  simulator.h  view.c
